# Galois-field-characteristics-2

./: CMakeLists.txt  README.md  main.cpp
NormalBasis/: CMakeLists.txt  main.cpp
NormalBasis/include/: GaloisFieldNormal.hpp  GaloisFieldPoly.hpp
NormalBasis/report/: CMakeLists.txt  measurments.cpp  report.tex
NormalBasis/src/: CMakeLists.txt  GaloisFieldNormal.cpp
NormalBasis/tests/: CMakeLists.txt  GaloisFieldNormalTests.cpp
PolynomialBasis/: README.md
PolynomialBasis/include/: GaloisFieldPoly.hpp
PolynomialBasis/report/: CMakeLists.txt  measurments.cpp
PolynomialBasis/src/: CMakeLists.txt  GaloisFieldPoly.cpp
PolynomialBasis/tests/: CMakeLists.txt  GaloisFieldPolyTests.cpp  GaloisFieldTests.cpp
include/: GaloisField.hpp
report/: CMakeLists.txt
src/: GaloisField.cpp
tests/: CMakeLists.txt  GaloisFieldTests.cpp
